--- a/notebooks/OPeNDAP_testing_client_side.ipynb
+++ b/notebooks/OPeNDAP_testing_client_side.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9258ab2f-17f7-4b4f-8183-eb611fd49c94",
    "metadata": {},
@@ -18,6 +19,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d320ac72-413e-496d-9b13-5f40f77f3c8f",
    "metadata": {},
@@ -41,6 +43,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1df3157f-d503-4a46-b96d-0004843ca786",
    "metadata": {
@@ -188,6 +191,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "50c03b76-55c1-4b20-94b3-c7711300b3c2",
    "metadata": {
@@ -306,6 +310,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "08f852d2-46a1-4969-9fb3-46bff3e8ef67",
    "metadata": {},
@@ -404,6 +409,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7741c2e3-ed50-4e29-a2de-cf8adde44316",
    "metadata": {
@@ -509,6 +515,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a58838f0-47db-4b7c-8090-994c4095342c",
    "metadata": {
@@ -635,6 +642,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "98bcfdec-44a8-40ec-8da1-19af16ea291b",
    "metadata": {
@@ -745,6 +753,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "18597e21-1715-4274-904f-84686eaad8b7",
    "metadata": {},
@@ -973,414 +982,6 @@
    "source": [
     "print(series_data_response.content.decode('utf-8'))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9f138b2e-1ada-45f4-87c3-cb32266c16fa",
-   "metadata": {},
-   "source": [
-    "# PyDAP to access OpeNDAP data (client side)\n",
-    "\n",
-    "**Notes:**\n",
-    "* PyDAP documentation is [here](https://www.pydap.org/en/latest/client.html).\n",
-    "* Under the hood, `xarray` uses `pydap` in their [`xarray.backends.PydapBackendEntrypoint`](https://github.com/pydata/xarray/blob/5043223ca7942c6eb582798aafa843d2efc0895b/xarray/backends/pydap_.py#L141) (which uses the [`xarray.backends.PydapDataStore`](https://github.com/pydata/xarray/blob/main/xarray/backends/pydap_.py#L76)).\n",
-    "* PyDAP can be used on client or server side applications.\n",
-    "* Dimensions/axes are `BaseType` while the data variable is `GridType` (N-dimensional array).\n",
-    "* **The request is lazy until you download to numpy via indexing the data/axis**\n",
-    "    * For example: `sst[0,10:14,10:14]`\n",
-    "* You can use URL subsetting as demo-ed above, however, I am noticing odd behavior where the size of the arrays returned is not aligned with what one gets using pure request! **Raise GitHub Issue?**\n",
-    "    * In the meantime we should rely on the lazy evaluation for subsetting, NOT URL subsetting if using PyDAP.\n",
-    "    * **But also we should figure this out as server side processing is ideal!**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 296,
-   "id": "2e08095c-db85-47cb-9a2d-fcc0cf33245c",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import pydap.client"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 297,
-   "id": "cbb43deb-110c-476d-8d18-f8d36160c47b",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['BytesIO',\n",
-       " 'DAPHandler',\n",
-       " 'DEFAULT_TIMEOUT',\n",
-       " 'DapType',\n",
-       " 'Functions',\n",
-       " 'GET',\n",
-       " 'ServerFunction',\n",
-       " 'ServerFunctionResult',\n",
-       " 'StreamReader',\n",
-       " '__builtins__',\n",
-       " '__cached__',\n",
-       " '__doc__',\n",
-       " '__file__',\n",
-       " '__loader__',\n",
-       " '__name__',\n",
-       " '__package__',\n",
-       " '__spec__',\n",
-       " 'add_attributes',\n",
-       " 'build_dataset',\n",
-       " 'encode',\n",
-       " 'open',\n",
-       " 'open_dods',\n",
-       " 'open_file',\n",
-       " 'open_url',\n",
-       " 'parse_das',\n",
-       " 'raise_for_status',\n",
-       " 'unpack_data',\n",
-       " 'urlsplit',\n",
-       " 'urlunsplit']"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "display(dir(pydap.client))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d24de078-b4a8-409e-9def-bc10c3091bde",
-   "metadata": {},
-   "source": [
-    "## Exploring gridded data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 390,
-   "id": "b55c93dc-4f57-419a-9f96-7ce9dcee8ee8",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: total: 0 ns\n",
-      "Wall time: 263 ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<DatasetType with children 'lat', 'lon', 'time', 'time_bnds', 'sst'>"
-      ]
-     },
-     "execution_count": 390,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "# pass in the netcdf endpoint using OPeNDAP URL subsetting\n",
-    "dap_data = pydap.client.open_url(f'http://test.opendap.org/dap/data/nc/sst.mnmean.nc.gz')\n",
-    "dap_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 403,
-   "id": "00b3159f-f809-48a9-943e-f705cb521fa8",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<BaseType with data BaseProxy('http://test.opendap.org/dap/data/nc/sst.mnmean.nc.gz', 'lat', dtype('>f4'), (89,), (slice(None, None, None),))>\n",
-      "<GridType with array 'sst' and maps 'time', 'lat', 'lon'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(dap_data['lat'])\n",
-    "print(dap_data['sst'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 414,
-   "id": "5c75f15a-382c-467f-b380-8610ccf49697",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  0.,   2.,   4.,   6.,   8.,  10.,  12.,  14.,  16.,  18.,  20.,\n",
-       "        22.,  24.,  26.,  28.,  30.,  32.,  34.,  36.,  38.,  40.,  42.,\n",
-       "        44.,  46.,  48.,  50.,  52.,  54.,  56.,  58.,  60.,  62.,  64.,\n",
-       "        66.,  68.,  70.,  72.,  74.,  76.,  78.,  80.,  82.,  84.,  86.,\n",
-       "        88.,  90.,  92.,  94.,  96.,  98., 100., 102., 104., 106., 108.,\n",
-       "       110., 112., 114., 116., 118., 120., 122., 124., 126., 128., 130.,\n",
-       "       132., 134., 136., 138., 140., 142., 144., 146., 148., 150., 152.,\n",
-       "       154., 156., 158., 160., 162., 164., 166., 168., 170., 172., 174.,\n",
-       "       176., 178., 180., 182., 184., 186., 188., 190., 192., 194., 196.,\n",
-       "       198., 200., 202., 204., 206., 208., 210., 212., 214., 216., 218.,\n",
-       "       220., 222., 224., 226., 228., 230., 232., 234., 236., 238., 240.,\n",
-       "       242., 244., 246., 248., 250., 252., 254., 256., 258., 260., 262.,\n",
-       "       264., 266., 268., 270., 272., 274., 276., 278., 280., 282., 284.,\n",
-       "       286., 288., 290., 292., 294., 296., 298., 300., 302., 304., 306.,\n",
-       "       308., 310., 312., 314., 316., 318., 320., 322., 324., 326., 328.,\n",
-       "       330., 332., 334., 336., 338., 340., 342., 344., 346., 348., 350.,\n",
-       "       352., 354., 356., 358.], dtype=float32)"
-      ]
-     },
-     "execution_count": 414,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# use this notation to get values out of a BaseType axis\n",
-    "dap_data['lon'][:].data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 392,
-   "id": "2f3480e9-6600-4d07-81f8-ffdd33386fd5",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('time', 'lat', 'lon')"
-      ]
-     },
-     "execution_count": 392,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dap_data['sst'].dimensions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 393,
-   "id": "3a7db7a2-2f1e-4260-8b20-cfcd56809d90",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<BaseType with data BaseProxy('http://test.opendap.org/dap/data/nc/sst.mnmean.nc.gz', 'sst.sst', dtype('>i2'), (1857, 89, 180), (slice(None, None, None), slice(None, None, None), slice(None, None, None)))>"
-      ]
-     },
-     "execution_count": 393,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dap_data['sst'].array"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 412,
-   "id": "abf1510f-749d-4de8-8472-33f950cc0c57",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: total: 31.2 ms\n",
-      "Wall time: 516 ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[[  962,  1141,  1204,  1191,  1176,  1184,  1196,  1202,  1208,\n",
-       "          1219,  1225,  1226,  1212,  1201,  1188,  1174,  1155,  1134,\n",
-       "          1112,  1084,  1053],\n",
-       "        [ 1172,  1310,  1346,  1328,  1310,  1306,  1304,  1300,  1297,\n",
-       "          1298,  1291,  1287,  1269,  1253,  1241,  1232,  1223,  1215,\n",
-       "          1205,  1189,  1170],\n",
-       "        [ 1424,  1463,  1452,  1434,  1420,  1408,  1394,  1381,  1372,\n",
-       "          1368,  1354,  1349,  1332,  1315,  1305,  1300,  1295,  1286,\n",
-       "          1270,  1251,  1234],\n",
-       "        [ 1601,  1579,  1551,  1534,  1522,  1501,  1475,  1456,  1446,\n",
-       "          1443,  1431,  1427,  1411,  1396,  1387,  1383,  1374,  1349,\n",
-       "         32767, 32767, 32767],\n",
-       "        [ 1691,  1663,  1642,  1628,  1611,  1586,  1557,  1536,  1529,\n",
-       "          1527,  1520,  1517,  1502,  1487,  1478,  1473,  1466, 32767,\n",
-       "         32767, 32767, 32767],\n",
-       "        [ 1758,  1740,  1725,  1711,  1693,  1672,  1649,  1633,  1628,\n",
-       "          1619,  1615,  1610,  1599,  1583,  1572,  1561,  1556,  1568,\n",
-       "         32767, 32767, 32767],\n",
-       "        [ 1834,  1822,  1810,  1798,  1785,  1771,  1756,  1744,  1731,\n",
-       "          1721,  1713,  1705,  1693,  1678,  1662,  1647,  1633,  1620,\n",
-       "          1582,  1530,  1495],\n",
-       "        [ 1919,  1910,  1901,  1894,  1887,  1877,  1863,  1848,  1832,\n",
-       "          1816,  1802,  1790,  1774,  1756,  1735,  1713,  1694,  1668,\n",
-       "         32767, 32767, 32767],\n",
-       "        [ 2012,  2003,  1996,  1990,  1982,  1967,  1947,  1932,  1912,\n",
-       "          1890,  1871,  1855,  1835,  1812,  1783,  1749,  1721, 32767,\n",
-       "         32767, 32767, 32767],\n",
-       "        [ 2104,  2092,  2084,  2077,  2060,  2038,  2020,  2001,  1978,\n",
-       "          1953,  1930,  1910,  1886,  1856,  1817,  1768,  1732, 32767,\n",
-       "         32767, 32767, 32767]]], dtype=int16)"
-      ]
-     },
-     "execution_count": 412,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "# get data at the first timeset, and 10x10 lat/lon grid\n",
-    "# note the array attribute returns a BaseType containing the data\n",
-    "# the data property returns a LIST of numpy arrays including the axes\n",
-    "dap_data['sst'][0, 20:30, -21:].array.data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 350,
-   "id": "97e0515d-254c-46d4-bb4b-b3f6ef040bc4",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[BaseProxy('http://test.opendap.org/dap/data/nc/sst.mnmean.nc.gz', 'sst.sst', dtype('>i2'), (6, 10, 11), (slice(0, 6, 1), slice(0, 10, 1), slice(0, 11, 1))),\n",
-       " BaseProxy('http://test.opendap.org/dap/data/nc/sst.mnmean.nc.gz', 'sst.time', dtype('>f8'), (6,), (slice(0, 6, 1),)),\n",
-       " BaseProxy('http://test.opendap.org/dap/data/nc/sst.mnmean.nc.gz', 'sst.lat', dtype('>f4'), (10,), (slice(0, 10, 1),)),\n",
-       " BaseProxy('http://test.opendap.org/dap/data/nc/sst.mnmean.nc.gz', 'sst.lon', dtype('>f4'), (11,), (slice(0, 11, 1),))]"
-      ]
-     },
-     "execution_count": 350,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# combining them gets just the variable array's data\n",
-    "dap_data['sst'].data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4bb3b342-0382-4bc6-89c3-2d6aeda064ab",
-   "metadata": {},
-   "source": [
-    "## Exploring series data\n",
-    "\n",
-    "* The documentation says that you can use `dataset.location` to query by attributes but that does not seem to work. See [here](https://www.pydap.org/en/latest/client.html#accessing-sequential-data)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 436,
-   "id": "84ea2545-e077-40d1-b66f-bea53f9149f4",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "series_dap = pydap.client.open_url(r'http://test.opendap.org/dap/data/ff/gsodock.dat')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 437,
-   "id": "a3d03a78-6a6f-46dc-90c5-24ca2a4f6666",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<DatasetType with children 'URI_GSO-Dock'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(series_dap)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 438,
-   "id": "a64d7473-ae30-4c94-815f-e46ef1bab933",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<SequenceType with children 'Time', 'Depth', 'Sea_Temp', 'Salinity', 'DO_percent', 'pH', 'Turbidity', 'Air_Temp', 'Wind_Speed', 'Wind_Direction', 'Barometric_Pres', 'Solar_Radiation'>"
-      ]
-     },
-     "execution_count": 438,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "series_dap['URI_GSO-Dock']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a45a7555-651a-41e2-80db-5274f91a15dc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# we can subset using dataset.location indexing (like pandas)\n",
-    "series_dap['URI_GSO-Dock'].location[\n",
-    "    (series_dap['URI_GSO-Dock'].location)\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12faa46e-d81b-4caf-aacb-5b3c0bdae826",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
